# sidick_abdoulaye_sino1

./: README.md  categories.json  db.sqlite3  index.html  pannier.html  pyproject.toml  requirements.txt
assets/css/: style.css  styles.css
assets/js/: app.py  script.js  student-space.js
chat/: models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_room_created_at_alter_room_name.py  0003_alter_message_room.py  0004_alter_message_date.py  0005_alter_message_date.py
chat/templates/chat/: home.html  message.html  room.html
contact/: urls.py  views.py
contact/static/css/: styles.css
contact/static/js/: scripts.js
contact/templates/contact/: Qst3.html  index.html  index1.html  success.html
myproject/: asgi.py  settings.py  urls.py
