[tool.poetry]
name = "send"
version = "0.1.0"
description = ""
authors = ["VotreNom <VotreEmail@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2"
djangorestframework = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
